# tickproof

./: .gitignore  Cargo.toml  README.md
crates/merkle/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/examples/: throughput.rs
crates/runtime/src/: lib.rs  log.rs
crates/runtime/tests/: dispute.rs  wager.rs
docs/: BEYOND-GAMES.md  HONEST-TAKE.md  ROADMAP.md
games/arena/: Cargo.toml
games/arena/src/: lib.rs
programs/arena-program/src/: lib.rs
programs/referee/: Cargo.toml
programs/referee/src/: lib.rs
tools/arena-viewer/: Cargo.toml
tools/arena-viewer/src/: main.rs
tools/devnet-dispute/: Cargo.toml
tools/devnet-dispute/src/: main.rs
tools/devnet-match/: Cargo.toml
tools/devnet-match/src/: main.rs
web/: README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/console/: page.tsx
web/app/paper/: page.tsx
web/components/: match-card.tsx  providers.tsx  wallet-button.tsx
web/lib/: constants.ts
web/scripts/: check-merkle.mjs
